--- a/profile.html
+++ b/profile.html
@@ -11,6 +11,9 @@
     
     
 <!--footer is here -->
+<div>
+    <header><h1>KNOW MORE</h1></header>
+</div>
 <footer>
     <div class="footer_container">
 
