--- a/profile.html
+++ b/profile.html
@@ -4,16 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     
-    
+
+<!--contact form-->
+<div class="contact-section">
+
+    <h1>Contact Us</h1>
+    <div class="border"></div>
+    <form class="contact-form" action="index.html" method="post">
+      <input type="text" class="contact-form-text" placeholder="Your name">
+      <input type="email" class="contact-form-text" placeholder="Your email">
+      <input type="text" class="contact-form-text" placeholder="Your phone">
+      <textarea class="contact-form-text" placeholder="Your message"></textarea>
+      <input type="submit" class="contact-form-btn" value="Send">
+    </form>
+  </div>
+
+
+
 <!--footer is here -->
-<div>
-    <header><h1>KNOW MORE</h1></header>
-</div>
+
 <footer>
     <div class="footer_container">
 
