--- a/profile.html
+++ b/profile.html
@@ -5,11 +5,100 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="profile.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+    integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+<!--profile lookout--> 
+<div class="profile">
+<div class="container">
+        <div class="cards">
+            <div class="img_box"><img src="chayan.png.jpeg" alt=""></div>
+            <div class="content">
+                <div class="details">
+                    <h2>Chayan Deoker</h2><span>Technology - ML/DL ,Devops ,Jenkins , Cloud computing</span>
+                    <ul class="social_icons">
+                        <li><a href="#"><i class="fa fa-facebook-f" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="cards">
+            <div class="img_box"><img src="niharika.jpeg" alt=""></div>
+            <div class="content">
+                <div class="details">
+                    <h2>Niharika Dhanik</h2><span>Technology - FLUTTER
+                    ,DOCKER, KUBERNETES</span>
+                    <ul class="social_icons">
+                        <li><a href="#"><i class="fa fa-facebook-f" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="cards">
+            <div class="img_box"><img src="mani.jpeg" alt=""></div>
+            <div class="content">
+                <div class="details">
+                    <h2>Mani Bhargava Banka </h2><span> Technology - AutoCAD,
+                        Shell Scripting,
+                        Ansible,
+                        Docker,                                        
+                        AWS,                   
+                        Git and GitHub</span>
+                    <ul class="social_icons">
+                        <li><a href="#"><i class="fa fa-facebook-f" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="cards">
+            <div class="img_box"><img src="rizwan1.png" alt=""></div>
+            <div class="content">
+                <div class="details">
+                    <h2>Rizwan Pathan</h2><span> Technology -  RHCSA ,CCNA ,PYTHON</span>
+                    <ul class="social_icons">
+                        <li><a href="#"><i class="fa fa-facebook-f" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="cards">
+            <div class="img_box"><img src="RavikiranJaiswal.jpg" alt=""></div>
+            <div class="content">
+                <div class="details">
+                    <h2>RaviKiran Jaiswal</h2><span>Technology - Java, MySQL, HTML, CSS</span>
+                    <ul class="social_icons">
+                        <li><a href="#"><i class="fa fa-facebook-f" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>>
+</div> 
+
 
 <!--contact form-->
 <div class="contact-section">
