--- a/profile.html
+++ b/profile.html
@@ -13,6 +13,24 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+<!--nav bar-->
+
+<div class="back">
+	<img src="image7.jpeg" width=1520px , height=700px>
+	<div class = "center1">
+            <p>Get Started with </p>
+			<p>Summer Tribrids!</p>
+	</div>
+    <nav>		
+      <a href="#">Home</a>
+      <a href="#">Projects</a>
+      <a href="#">Team</a>
+      <a href="#">Contact</a>
+      <div class="animation start-home"></div>
+    </nav>
+</div>	
+
+
 <!--profile lookout--> 
 <div class="profile">
 <div class="container">
